[project]
name = "file-ordo"
version = "0.1.1"
description = "A cross-platform tool to create a structured file organization system"
readme = "../README.md"
requires-python = ">=3.6"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "Kirk Lin", email = "linkirk@163.com"},
]

[project.urls]
"Homepage" = "https://github.com/kirklin/ordo"
"Bug Tracker" = "https://github.com/kirklin/ordo/issues"

[project.scripts]
ordo = "ordo.cli:main"
